# polymath-v3

./: .env.example  .gitignore  CLAUDE.md  NEXT_SESSION_CONTINUE.md  NEXT_SESSION_E2E_TEST.md  NEXT_SESSION_PROMPT.md  NEXT_SESSION_PROTOTYPE.md  POLYMATH_WORKING_MEMORY.md  README.md  journal_subscription_list.csv  pyproject.toml
batch/: __init__.py  concept_extraction.py  job_manager.py
cli/: main.py
data/config/: generic_methods.json
data/eval_sets/: core.jsonl
data/evalsets/: core_eval.jsonl
docs/: IMPLEMENTATION_ROADMAP.md  POLYMATH_SYSTEM_SPEC.md  UPGRADE_ASSESSMENT.md
docs/plans/: 2026-01-17-batch-v1-integration.md  2026-01-17-e2e-pipeline-test.md
lib/: __init__.py  config.py  prompts.py  secrets.py  telemetry.py
lib/bridgemine/: __init__.py  gap_detection.py  novelty_check.py
lib/db/: __init__.py  neo4j.py  neo4j_async.py  postgres.py  postgres_async.py
lib/embeddings/: __init__.py
lib/evaluation/: __init__.py  eval_sets.py  metrics.py
lib/ingest/: __init__.py  chunking.py  concept_canonicalizer.py  concept_extractor.py  doc_identity.py  metadata.py  pipeline.py  skill_extractor.py
lib/search/: __init__.py  hybrid_search.py  jit_retrieval.py  (+1 more)
mcp/: polymath_server.py
scripts/: backfill_concepts.py  backfill_embeddings_batch.py  e2e_pipeline_test.py  extract_new_batch.py  generate_asset_registry.py  ingest_from_zotero.py  promote_skill.py  reingest_archive.py  run_baseline.py  run_evaluation.py  sync_neo4j.py  sync_neo4j_batch.py  validate_pdf_quality.py
tests/: conftest.py  sanity_check.py  test_chunking.py  test_concept_canonicalizer.py  test_retrieval_regression.py  test_security.py
(+14 files in other folders)
